se eliminó br de más y contenedores

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
     <!--CONTENIDO-->
     <main class="content">
-        <legend>R3D IMPRESSIONS</legend>
+        <div>
+            <legend>R3D IMPRESSIONS</legend>
 
-        <section>
+
             <article>
                 <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a href="./pages/calidad.html">calidad</a> con las
                     mejors
@@ -50,41 +51,42 @@
                     y desafíos que nos presentan los clientes.
                 </p>
             </article>
-
+        </div>
+        <div>
             <h2>Nuevos Productos</h2>
-            <section>
 
-                <div id="productos__flex">
-                    <!--MATE YODA-->
-                    <div class="card" style="width: 18em">
-                        <img src="https://http2.mlstatic.com/D_NQ_NP_626332-MLA46977380550_082021-O.jpg"
-                            class="card-img-top" alt="foto mate yoda 3D" id="yoda">
-                        <div class="card-body">
-                            <h3 class="card-title">Mate Yoda</h3>
-                            <P class="card-text">Se destaca por ser personaje de StarWars y por la comodidad y aspecto
-                                que brinda al
-                                mate
-                                del
-                                día
-                                a
-                                día</P>
-                        </div>
-                    </div>
-                    <!--PORTA |LAPICERO-->
-                    <div class="card" style="width: 18em">
-                        <img src="https://cf.shopee.cl/file/17b2a75e66d6b4b2c809d85b6ece2d4a_tn" class="card-img-top"
-                            alt="Lapicero 3D para fibras" id="lapicero">
-                        <div class="card-body">
-                            <h3 class="card-title">Porta pinceles-lapices</h3>
-                            <P class="card-text">Sencillo pero útil, ideal para librerías,para artistas o personas
-                                aficionadas que
-                                quieran un
-                                orden
-                                eficiente de sus fibras</P>
-                        </div>
+            <div id="productos__flex">
+                <!--MATE YODA-->
+                <div class="card" style="width: 18em">
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_626332-MLA46977380550_082021-O.jpg"
+                        class="card-img-top" alt="foto mate yoda 3D" id="yoda">
+                    <div class="card-body">
+                        <h3 class="card-title">Mate Yoda</h3>
+                        <P class="card-text">Se destaca por ser personaje de StarWars y por la comodidad y aspecto
+                            que brinda al
+                            mate
+                            del
+                            día
+                            a
+                            día</P>
                     </div>
                 </div>
-            </section>
+            </div>
+            <!--PORTA |LAPICERO-->
+            <div class="card" style="width: 18em">
+                <img src="https://cf.shopee.cl/file/17b2a75e66d6b4b2c809d85b6ece2d4a_tn" class="card-img-top"
+                    alt="Lapicero 3D para fibras" id="lapicero">
+                <div class="card-body">
+                    <h3 class="card-title">Porta pinceles-lapices</h3>
+                    <P class="card-text">Sencillo pero útil, ideal para librerías,para artistas o personas
+                        aficionadas que
+                        quieran un
+                        orden
+                        eficiente de sus fibras</P>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer id="pie">Contacto:
