se agregó BEM a enlaces y se agregó section a nuevos productos index

--- a/index.html
+++ b/index.html
@@ -21,40 +21,39 @@
         <ul>
             <li class="logo"><a href=".//index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
                         src="./image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
-            <li><a href="./pages/productos-y-servicios.html">Productos y servicios</a></li>
-            <li><a href="./pages/calidad.html">Calidad</a></li>
-            <li><a href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a class="enlace" href="./pages/productos-y-servicios.html">Productos y servicios</a></li>
+            <li><a class="enlace" href="./pages/calidad.html">Calidad</a></li>
+            <li><a class="enlace" href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
+            <li><a class="enlace" href="./pages/contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
     <!--CONTENIDO-->
     <main class="content">
-        <div>
-            <legend>R3D IMPRESSIONS</legend>
+
+        <legend>R3D IMPRESSIONS</legend>
 
 
-            <article>
-                <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a href="./pages/calidad.html">calidad</a> con las
-                    mejors
-                    máquinas,
-                    para proyectos contactate con nosotros <a href="./pages/contacto.html">haciendo click aqui</a>.
-                    También
-                    te
-                    sugerimos ir a nuestra sección de <a
-                        href="./pages/productos-y-servicios.html">productos-y-servicios</a>
-                    allí
-                    podrás ver tantos productos, como servicios que brindamos para un desempeño mejor en la
-                    resolución
-                    de
-                    problemas
-                    y desafíos que nos presentan los clientes.
-                </p>
-            </article>
-        </div>
-        <div>
-            <h2>Nuevos Productos</h2>
+        <article>
+            <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a class="enlace" href="./pages/calidad.html">calidad</a> con las
+                mejors
+                máquinas,
+                para proyectos contactate con nosotros <a class="enlace" href="./pages/contacto.html">haciendo click aqui</a>.
+                También
+                te
+                sugerimos ir a nuestra sección de <a class="enlace" href="./pages/productos-y-servicios.html">productos-y-servicios</a>
+                allí
+                podrás ver tantos productos, como servicios que brindamos para un desempeño mejor en la
+                resolución
+                de
+                problemas
+                y desafíos que nos presentan los clientes.
+            </p>
+        </article>
 
+
+        <h2>Nuevos Productos</h2>
+        <section>
             <div id="productos__flex">
                 <!--MATE YODA-->
                 <div class="card" style="width: 18em">
@@ -71,22 +70,22 @@
                             día</P>
                     </div>
                 </div>
-            </div>
-            <!--PORTA |LAPICERO-->
-            <div class="card" style="width: 18em">
-                <img src="https://cf.shopee.cl/file/17b2a75e66d6b4b2c809d85b6ece2d4a_tn" class="card-img-top"
-                    alt="Lapicero 3D para fibras" id="lapicero">
-                <div class="card-body">
-                    <h3 class="card-title">Porta pinceles-lapices</h3>
-                    <P class="card-text">Sencillo pero útil, ideal para librerías,para artistas o personas
-                        aficionadas que
-                        quieran un
-                        orden
-                        eficiente de sus fibras</P>
+
+                <!--PORTA |LAPICERO-->
+                <div class="card" style="width: 18em">
+                    <img src="https://cf.shopee.cl/file/17b2a75e66d6b4b2c809d85b6ece2d4a_tn" class="card-img-top"
+                        alt="Lapicero 3D para fibras" id="lapicero">
+                    <div class="card-body">
+                        <h3 class="card-title">Porta pinceles-lapices</h3>
+                        <P class="card-text">Sencillo pero útil, ideal para librerías,para artistas o personas
+                            aficionadas que
+                            quieran un
+                            orden
+                            eficiente de sus fibras</P>
+                    </div>
                 </div>
             </div>
-        </div>
-
+        </section>
     </main>
 
     <footer id="pie">Contacto:
