--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -20,10 +20,10 @@
         <ul>
             <li class="logo"><a href="../index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img src="../image/logo nav.jpeg"
                     alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
-            <li><a href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
-            <li><a href="../pages/calidad.html">Calidad</a></li>
-            <li><a href="../pages/sobrenosotros.html">Sobre nosotros</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
+            <li><a class="enlace" href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
+            <li><a class="enlace" href="../pages/calidad.html">Calidad</a></li>
+            <li><a class="enlace"  href="../pages/sobrenosotros.html">Sobre nosotros</a></li>
+            <li><a class="enlace" href="../pages/contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
