aplicación de sass

--- a/index.html
+++ b/index.html
@@ -7,41 +7,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./styles/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>R3D-Inicio</title>
     <link rel="shortcut icon" href="./image/foto logo head.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;1,300&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description"
+        content="Empresa de impresiones 3D, realizamos todo tipo de impresiones desde prótesis,repuestos y objetos, también podés trearnos tu prototipo-diseño y te ofrecemos el servicio de impresión 3D">
+    <meta name="keywords"
+        content="impresion 3D, 3D Prints,prótesis,servicio de impresión 3D, prototipo, prótesis económicas, prótesis 3D,repuestos económicos, repuestos 3D,soluciones 3D, asesoramiento en 3D">
 </head>
 
 <body class="mediacontainer">
+
     <nav class="navUP">
         <ul>
-            <li class="logo"><a href=".//index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
+            <li class="logo"><a href="./index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
                         src="./image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
-            <li><a class="enlace" href="./pages/productos-y-servicios.html">Productos y servicios</a></li>
-            <li><a class="enlace" href="./pages/calidad.html">Calidad</a></li>
-            <li><a class="enlace" href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
-            <li><a class="enlace" href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/productos-y-servicios.html">Productos y Servicios</a></li>
+            <li><a href="./pages/calidad.html">Calidad</a></li>
+            <li><a href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
     <!--CONTENIDO-->
     <main class="content">
 
-        <legend>R3D IMPRESSIONS</legend>
+        <legend>R3D PRINTS</legend>
 
 
-        <article>
-            <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a class="enlace" href="./pages/calidad.html">calidad</a> con las
+        <article data-aos="fade-up" data-aos-duration="3000">
+            <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a class="enlace" href="./pages/calidad.html">calidad</a> con
+                las
                 mejors
                 máquinas,
-                para proyectos contactate con nosotros <a class="enlace" href="./pages/contacto.html">haciendo click aqui</a>.
+                para proyectos contactate con nosotros <a class="enlace" href="./pages/contacto.html">haciendo click
+                    aqui</a>.
                 También
                 te
-                sugerimos ir a nuestra sección de <a class="enlace" href="./pages/productos-y-servicios.html">productos-y-servicios</a>
+                sugerimos ir a nuestra sección de <a class="enlace"
+                    href="./pages/productos-y-servicios.html">productos-y-servicios</a>
                 allí
                 podrás ver tantos productos, como servicios que brindamos para un desempeño mejor en la
                 resolución
@@ -52,8 +61,8 @@
         </article>
 
 
-        <h2>Nuevos Productos</h2>
-        <section>
+        <h2 data-aos="fade-up" data-aos-duration="3000">Nuevos Productos</h2>
+        <section data-aos="fade-up" data-aos-duration="3000">
             <div id="productos__flex">
                 <!--MATE YODA-->
                 <div class="card" style="width: 18em">
@@ -76,7 +85,7 @@
                     <img src="https://cf.shopee.cl/file/17b2a75e66d6b4b2c809d85b6ece2d4a_tn" class="card-img-top"
                         alt="Lapicero 3D para fibras" id="lapicero">
                     <div class="card-body">
-                        <h3 class="card-title">Porta pinceles-lapices</h3>
+                        <h3 class="card-title">Lapicero</h3>
                         <P class="card-text">Sencillo pero útil, ideal para librerías,para artistas o personas
                             aficionadas que
                             quieran un
@@ -88,32 +97,45 @@
         </section>
     </main>
 
-    <footer id="pie">Contacto:
-        tel:11-1111-1111
-        mail: R3DIMPRESSIONS@.com.ar
-        Instagram: @R3DIMPRESSIONS
+    <footer id="pie">
+        <ul>
+            <li>
+                <a href="./index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img src="./image/logo nav.jpeg"
+                        alt="Logo de la empresa R3DIMPRESSIONS"></a>
+            </li>
+            <li>
+                <p> Contacto:</p>
+            </li>
+            <li>
+                <p>tel:11-1111-1111</p>
+            </li>
+            <li>
+                <p> R3DIMPRESSIONS@.com.ar</p>
+            </li>
+            <li>
+                <p>Instagram: @R3DIMPRESSIONS</p>
+            </li>
+        </ul>
         <section class="whastapp">
             <a href="https://web.whatsapp.com/" id="enlace a whastapp"><img
                     src="https://th.bing.com/th?id=AMMS_2eb53b8d8cfafe9dbe9a6a6db6f61445&w=110&h=110&c=7&rs=1&qlt=80&pcl=f9f9f9&o=6&cdv=1&pid=16.1"
-                    alt="enlace a whastapp"></a>
-
+                    alt="enlace a whastapp">
+            </a>
         </section>
-        </div>
+    </footer>
+    <div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
-        </div>
+    </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
+    </script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
 
-<!--corrección pre entrega:
-    EL PROFE: DIJO DE SACAR LOS BR Y REEMPLAZAR POR MARGIN, EXCEPTO ENTRE TEXTO
-    clase grid:
-medida 12px para la letra óptimo, más chico no por que el lector no va a poder leer nada
-pantalla min 320 para entrega
-usar medidas relativas
-FIJARSE ARCHIVO  CLASE DICE DE PASAR PX A EM PARA EL MEDIAQUARIES
-aprovechar flex,grid
-RECORDAR USAR MODO DE LENGUAJE UNICORE BEM HACERLO EL JUEVES
-RECORDAR MODIFICAR PRODUCTOS Y SERICIOS VA UNO AL LADO DEL OTRO-->
+<!--RECORDAR MODIFICAR PRODUCTOS Y SERICIOS VA UNO AL LADO DEL OTRO EL VIERNES 10/03/23:
+PROBAR CARD EN BOOTSTRAP-->
