--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,46 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>R3D- Contacto</title>
     <link rel="shortcut icon" href="../image/foto logo head.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;1,300&display=swap"
         rel="stylesheet">
+        <meta name="description"  content="contacto de R3D, contactanos a traves del n°:111-111-111 o por nuestras redes sociales R3D Instagram, R3D Twitter, R3D mail">
+        <meta name="keyword"  content=" redes sociales R3D Instagram, R3D Twitter, R3D mail">
+
 </head>
 
-<body>
-    <header>
-        <nav>
+<body class="mediacontainer">
+        <nav class="navUP">
             <ul>
-                <li class="logo"><a href="../index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img src="../image/logo nav.jpeg"
-                        alt="Logo de la empresa R3DIMPRESSIONS"></a></li>                <li><a href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
+                <li class="logo"><a href="../index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
+                            src="../image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
+                <li><a href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
                 <li><a href="../pages/calidad.html">Calidad</a></li>
                 <li><a href="../pages/sobrenosotros.html">Sobre nosotros</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
+    <main class="content">
         <legend>¿Cómo contactarnos?</legend>
         <section>
-            <h2>Contacto</h2>
-            <p>Podes contactarnos a través de nuestro teléfono, mail, redes sociles o completando el formulario</p>
+            <h2 data-aos="fade-up" data-aos-duration="3000">Contacto</h2>
+            <p data-aos="fade-up" data-aos-duration="3000">Podes contactarnos a través de nuestro teléfono, mail, redes
+                sociles o completando el formulario</p>
             <br>
-            Tel:11-1111-1111
-            <br>
-            Mail: R3DIMPRESSIONS@.com.ar
-            <br>
-            Instagram: @R3DIMPRESSIONS
-            <br>
-            Uibicación:<a href="#pie">Maps</a>
+            <p data-aos="fade-up" data-aos-duration="3000">
+                Tel:11-1111-1111
+                <br>
+                Mail: R3DIMPRESSIONS@.com.ar
+                <br>
+                Instagram: @R3DIMPRESSIONS
+                <br>
+                Uibicación:<a href="#pie" class="enlace">Maps</a>
             </p>
         </section>
         <div>
-            <h2>Consulta<h2>
-                    <p>A continuación dejanos tus datos de contacto y tus inconvenientes para otorgarte una cita</p>
-                    <form>
+            <h2 data-aos="fade-up" data-aos-duration="3000">Consulta<h2>
+                    <p data-aos="fade-up" data-aos-duration="3000">A continuación dejanos tus datos de contacto y tus
+                        inconvenientes para otorgarte una cita</p>
+                    <form data-aos="fade-up" data-aos-duration="3000">
                         <fieldset>
                             <legend class="legendats">Datos de contacto</legend>
                             <label for="nombre">Nombre</label>
@@ -63,14 +69,14 @@
                             <input type="numero" id="numero">
                             <br>
                             <br>
-                            <textarea name="consulta" id="consulta" cols="30" rows="10">Consulta:</textarea>
+                            <textarea name="consulta" id="consulta" cols="20" rows="5">Consulta:</textarea>
                             <br>
                             <input type="submit" value="Enviar">
                             <input type="reset" value="Limpiar">
                         </fieldset>
                     </form>
         </div>
-        <div>
+        <div class=map data-aos="fade-up" data-aos-duration="3000">
             <h2>Podes encontrarnos en:<h2>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5131538.418446104!2d5.966409251223678!3d51.09676186178127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a721ec2b1be6b%3A0x75e85d6b8e91e55b!2sAlemania!5e0!3m2!1ses!2sar!4v1675466789942!5m2!1ses!2sar"
@@ -79,17 +85,35 @@
                     </iframe>
         </div>
     </main>
-    <footer id="pie">Contacto:
-        tel:11-1111-1111
-        mail: R3DIMPRESSIONS@.com.ar
-        Instagram: @R3DIMPRESSIONS
+    <footer id="pie">
+        <ul>
+            <li>
+                <a href="./index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img src="../image/logo nav.jpeg"
+                        alt="Logo de la empresa R3DIMPRESSIONS"></a>
+            </li>
+            <li>
+                <p> Contacto:</p>
+            </li>
+            <li>
+                <p>tel:11-1111-1111</p>
+            </li>
+            <li>
+                <p> R3DIMPRESSIONS@.com.ar</p>
+            </li>
+            <li>
+                <p>Instagram: @R3DIMPRESSIONS</p>
+            </li>
+        </ul>
         <section class="whastapp">
             <a href="https://web.whatsapp.com/" id="enlace a whastapp"><img
                     src="https://th.bing.com/th?id=AMMS_2eb53b8d8cfafe9dbe9a6a6db6f61445&w=110&h=110&c=7&rs=1&qlt=80&pcl=f9f9f9&o=6&cdv=1&pid=16.1"
                     alt="enlace a whastapp"></a>
         </section>
     </footer>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
