--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <nav class="navUP">
         <ul>
-            <li class="logo"><a href="./index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
-                        src="./image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
+            <li class="logo"><a href="./index.html" id="Logo de la empresa R3DPRINTS"> <img src="./image/logo nav.jpeg"
+                        alt="Logo de la empresa R3DPRINTS"></a></li>
             <li><a href="./pages/productos-y-servicios.html">Productos y Servicios</a></li>
             <li><a href="./pages/calidad.html">Calidad</a></li>
             <li><a href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
@@ -40,11 +40,11 @@
         <legend>R3D PRINTS</legend>
 
 
-        <article data-aos="fade-up" data-aos-duration="3000">
-            <p>Bienvenido a R3DIMPRESSIONS, Impresiones de <a class="enlace" href="./pages/calidad.html">calidad</a> con
+        <article data-aos="fade-up" data-aos-duration="1000">
+            <p>Bienvenido a R3DPRINTS, Impresiones de <a class="enlace" href="./pages/calidad.html">calidad</a> con
                 las
-                mejors
-                máquinas,
+                mejores
+                máquinas.
                 para proyectos contactate con nosotros <a class="enlace" href="./pages/contacto.html">haciendo click
                     aqui</a>.
                 También
@@ -61,8 +61,8 @@
         </article>
 
 
-        <h2 data-aos="fade-up" data-aos-duration="3000">Nuevos Productos</h2>
-        <section data-aos="fade-up" data-aos-duration="3000">
+        <h2 data-aos="fade-up" data-aos-duration="1000">Nuevos Productos</h2>
+        <section data-aos="fade-up" data-aos-duration="1000">
             <div id="productos__flex">
                 <!--MATE YODA-->
                 <div class="card" style="width: 18em">
@@ -93,7 +93,47 @@
                             eficiente de sus fibras</P>
                     </div>
                 </div>
+                <!--llavero-pez-->
+                <div class="card" style="width: 18em">
+                    <img src="https://cdn.pixabay.com/photo/2018/04/16/14/05/texture-3324749_1280.jpg"
+                        class="card-img-top" alt="llavero pex 3D" id="LLAVERO 3D">
+                    <div class="card-body">
+                        <h3 class="card-title">Llavero 3D Pez</h3>
+                        <P class="card-text">Se destaca por ser la figura de un pez, tiene una estructura que le permite
+                            flexibilidad y es pequeño ideal para cumplir la función de un llavero cómodo y único</P>
+                    </div>
+                </div>
+                <!--Perrito-->
+                <div class="card" style="width: 18em">
+                    <img src="https://images.pexels.com/photos/6940274/pexels-photo-6940274.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        class="card-img-top" alt="imagen perrito en 3D decoracion" id="perrito">
+                    <div class="card-body">
+                        <h3 class="card-title">Perrito</h3>
+                        <P class="card-text">Se destaca por simular un perrito, es ideal para decoración de hogar,
+                            también tiene un estilo elegante para ámbitos formales</P>
+                    </div>
+                </div>
+                <!--protesis mano-->
+                <div class="card" style="width: 18em">
+                    <img src="https://cdn.pixabay.com/photo/2016/03/22/16/20/prostetic-1273185_1280.jpg"
+                        class="card-img-top" alt="imagen de protesis de mano en 3D" id="mano">
+                    <div class="card-body">
+                        <h3 class="card-title">Prótesis de Mano en 3D</h3>
+                        <P class="card-text">Se destaca por ser una prótesis de mano a medida, brindando confort,
+                            funcionalidad y diseñada por nosotros como todos los productos que ofrecemos.</P>
+                    </div>
+                </div>
+                <!--robot-->
+                <div class="card" style="width: 18em">
+                    <img src="https://cdn.pixabay.com/photo/2015/02/25/11/39/robot-648622_1280.jpg" class="card-img-top"
+                        alt="Imagen de Robot, Servo y Sensor ultrasónico con 3D" id="Robot">
+                    <div class="card-body">
+                        <h3 class="card-title">Robot</h3>
+                        <P class="card-text">Se destaca por se un Robot, hecho con Servo y Sensor ultrasónico. </P>
+                    </div>
+                </div>
             </div>
+
         </section>
     </main>
 
