--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -33,12 +33,12 @@
     </nav>
     <main class="content">
         <legend>Calidad Garantizada</legend>
-        <h2 data-aos="fade-up" data-aos-duration="3000">Calidad</h2>
-        <p data-aos="fade-up" data-aos-duration="3000">
+        <h2 data-aos="fade-up" data-aos-duration="1000">Calidad</h2>
+        <p data-aos="fade-up" data-aos-duration="2000">
             En R3D PRINTS le damos mucha importancia a la calidad tanto en el proceso como en la terminación del
             producto, como verán más adelante contamos con certificados que nos avalan y máquinas de última generación.
             Nuestros empleados también cuantan con una formación profesional.</p>
-        <section class="imgcalidad" data-aos="fade-up" data-aos-duration="3000">
+        <section class="imgcalidad" data-aos="fade-up" data-aos-duration="2000">
             <img src="https://images.pexels.com/photos/7788368/pexels-photo-7788368.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                 alt="persona modelando impresion 3D">
             <img src="https://images.pexels.com/photos/7788371/pexels-photo-7788371.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -47,8 +47,8 @@
                 alt="Persona manipulando impresion 3D,segun los procesos que aseguran calidad">
         </section>
 
-        <h3 data-aos="fade-up" data-aos-duration="3000">Certificados de calidad</h3>
-        <p data-aos="fade-up" data-aos-duration="3000">Contamos con certificados que avalan nuestra calidad y nuestro
+        <h3 data-aos="fade-up" data-aos-duration="1000">Certificados de calidad</h3>
+        <p data-aos="fade-up" data-aos-duration="1000">Contamos con certificados que avalan nuestra calidad y nuestro
             compromiso con el medioambiente a continuación le dejamos las definiciones de los certificados que nos
             avalan ISO 9001 y el certificado ISO 14001,
             “ISO 9001 brinda los requisitos para que la organización gestione los procesos que afectan a la calidad de
@@ -58,15 +58,15 @@
 
         </p>
 
-        <h2 data-aos="fade-up" data-aos-duration="3000">Máquinas</h2>
-        <div data-aos="fade-up" data-aos-duration="3000">
+        <h2 data-aos="fade-up" data-aos-duration="1000">Máquinas</h2>
+        <div data-aos="fade-up" data-aos-duration="1000" class="videoyt">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RK4YdXc2-nc"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen id="video">
             </iframe>
         </div>
-        <p data-aos="fade-up" data-aos-duration="3000">Nuestras máquinas son magna 2 , cuentan con una tecnología FDM (Fused Deposition Modeling o Modelado por Deposición Fundida)
+        <p data-aos="fade-up" data-aos-duration="1000">Nuestras máquinas son magna 2 , cuentan con una tecnología FDM (Fused Deposition Modeling o Modelado por Deposición Fundida)
             Tiene aplicaciones en diseño industrial, arquitectura, industrias, medicina, robótica, hobbista.</p>
 
     </main>
