corrección sintaxis y scss contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,28 +13,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;1,300&display=swap"
         rel="stylesheet">
-        <meta name="description"  content="contacto de R3D, contactanos a traves del n°:111-111-111 o por nuestras redes sociales R3D Instagram, R3D Twitter, R3D mail">
-        <meta name="keyword"  content=" redes sociales R3D Instagram, R3D Twitter, R3D mail">
+    <meta name="description"
+        content="contacto de R3D, contactanos a traves del n°:111-111-111 o por nuestras redes sociales R3D Instagram, R3D Twitter, R3D mail">
+    <meta name="keyword" content=" redes sociales R3D Instagram, R3D Twitter, R3D mail">
 
 </head>
 
 <body class="mediacontainer">
-        <nav class="navUP">
-            <ul>
-                <li class="logo"><a href="../index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
-                            src="../image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
-                <li><a href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
-                <li><a href="../pages/calidad.html">Calidad</a></li>
-                <li><a href="../pages/sobrenosotros.html">Sobre nosotros</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <nav class="navUP">
+        <ul>
+            <li class="logo"><a href="../index.html" id="Logo de la empresa R3DIMPRESSIONS"> <img
+                        src="../image/logo nav.jpeg" alt="Logo de la empresa R3DIMPRESSIONS"></a></li>
+            <li><a href="../pages/productos-y-servicios.html">Productos y servicios</a></li>
+            <li><a href="../pages/calidad.html">Calidad</a></li>
+            <li><a href="../pages/sobrenosotros.html">Sobre nosotros</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
     <main class="content">
         <legend>¿Cómo contactarnos?</legend>
-        <section>
+        <section class="contact">
             <h2 data-aos="fade-up" data-aos-duration="3000">Contacto</h2>
-            <p data-aos="fade-up" data-aos-duration="3000">Podes contactarnos a través de nuestro teléfono, mail, redes
-                sociles o completando el formulario</p>
+            <p data-aos="fade-up" data-aos-duration="3000">Podes contactarnos a través de nuestro teléfono, mail,
+                redes
+                sociles o completando el formulario
+            </p>
             <br>
             <p data-aos="fade-up" data-aos-duration="3000">
                 Tel:11-1111-1111
@@ -47,41 +50,45 @@
             </p>
         </section>
         <div>
-            <h2 data-aos="fade-up" data-aos-duration="3000">Consulta<h2>
-                    <p data-aos="fade-up" data-aos-duration="3000">A continuación dejanos tus datos de contacto y tus
-                        inconvenientes para otorgarte una cita</p>
-                    <form data-aos="fade-up" data-aos-duration="3000">
-                        <fieldset>
-                            <legend class="legendats">Datos de contacto</legend>
-                            <label for="nombre">Nombre</label>
-                            <input type="text" id="nombre">
-                            <br>
-                            <br>
-                            <label for="apellido">Apellido</label>
-                            <input type="text" id="apellido">
-                            <br>
-                            <br>
-                            <label for="email">Correo electrónico</label>
-                            <input type="text" id="email">
-                            <br>
-                            <br>
-                            <label for="numero">Telefono</label>
-                            <input type="numero" id="numero">
-                            <br>
-                            <textarea name="consulta" id="consulta" cols="20" rows="5">Consulta:</textarea>
-                            <br>
-                            <input type="submit" value="Enviar">
-                            <input type="reset" value="Limpiar">
-                        </fieldset>
-                    </form>
+            <h2 data-aos="fade-up" data-aos-duration="3000">Consulta</h2>
+            <div>
+                <p data-aos="fade-up" data-aos-duration="3000">A continuación dejanos tus datos de contacto y
+                    tus
+                    inconvenientes para otorgarte una cita
+                </p>
+            </div>
+            <form data-aos="fade-up" data-aos-duration="3000">
+                <fieldset>
+                    <legend class="legendats">Datos de contacto</legend>
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre">
+                    <br>
+                    <br>
+                    <label for="apellido">Apellido</label>
+                    <input type="text" id="apellido">
+                    <br>
+                    <br>
+                    <label for="email">Correo electrónico</label>
+                    <input type="text" id="email">
+                    <br>
+                    <br>
+                    <label for="numero">Telefono</label>
+                    <input type="numero" id="numero">
+                    <br>
+                    <textarea name="consulta" id="consulta" cols="20" rows="5">Consulta:</textarea>
+                    <br>
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Limpiar">
+                </fieldset>
+            </form>
         </div>
         <div class=map data-aos="fade-up" data-aos-duration="3000">
-            <h2>Podes encontrarnos en:<h2>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5131538.418446104!2d5.966409251223678!3d51.09676186178127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a721ec2b1be6b%3A0x75e85d6b8e91e55b!2sAlemania!5e0!3m2!1ses!2sar!4v1675466789942!5m2!1ses!2sar"
-                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+            <h2>Podes encontrarnos en:</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5131538.418446104!2d5.966409251223678!3d51.09676186178127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a721ec2b1be6b%3A0x75e85d6b8e91e55b!2sAlemania!5e0!3m2!1ses!2sar!4v1675466789942!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </main>
     <footer id="pie">
