corrección en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
         <legend>¿Cómo contactarnos?</legend>
         <section class="contact">
             <h2 data-aos="fade-up" data-aos-duration="3000">Contacto</h2>
-            <p data-aos="fade-up" data-aos-duration="3000">Puedegits contactarnos a través de nuestro teléfono, mail,
+            <p data-aos="fade-up" data-aos-duration="3000">Puedes contactarnos a través de nuestro teléfono, mail,
                 redes
                 sociales o completando el formulario
             </p>
